; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/mce/extr_core.c___mcheck_cpu_init_vendor.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/mce/extr_core.c___mcheck_cpu_init_vendor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpuinfo_x86 = type { i32 }

@cmci_intel_adjust_timer = common dso_local global i32 0, align 4
@mce_adjust_timer = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cpuinfo_x86*)* @__mcheck_cpu_init_vendor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__mcheck_cpu_init_vendor(%struct.cpuinfo_x86* %0) #0 {
  %2 = alloca %struct.cpuinfo_x86*, align 8
  store %struct.cpuinfo_x86* %0, %struct.cpuinfo_x86** %2, align 8
  %3 = load %struct.cpuinfo_x86*, %struct.cpuinfo_x86** %2, align 8
  %4 = getelementptr inbounds %struct.cpuinfo_x86, %struct.cpuinfo_x86* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %19 [
    i32 128, label %6
    i32 131, label %10
    i32 129, label %13
    i32 130, label %16
  ]

6:                                                ; preds = %1
  %7 = load %struct.cpuinfo_x86*, %struct.cpuinfo_x86** %2, align 8
  %8 = call i32 @mce_intel_feature_init(%struct.cpuinfo_x86* %7)
  %9 = load i32, i32* @cmci_intel_adjust_timer, align 4
  store i32 %9, i32* @mce_adjust_timer, align 4
  br label %20

10:                                               ; preds = %1
  %11 = load %struct.cpuinfo_x86*, %struct.cpuinfo_x86** %2, align 8
  %12 = call i32 @mce_amd_feature_init(%struct.cpuinfo_x86* %11)
  br label %20

13:                                               ; preds = %1
  %14 = load %struct.cpuinfo_x86*, %struct.cpuinfo_x86** %2, align 8
  %15 = call i32 @mce_hygon_feature_init(%struct.cpuinfo_x86* %14)
  br label %20

16:                                               ; preds = %1
  %17 = load %struct.cpuinfo_x86*, %struct.cpuinfo_x86** %2, align 8
  %18 = call i32 @mce_centaur_feature_init(%struct.cpuinfo_x86* %17)
  br label %20

19:                                               ; preds = %1
  br label %20

20:                                               ; preds = %19, %16, %13, %10, %6
  ret void
}

declare dso_local i32 @mce_intel_feature_init(%struct.cpuinfo_x86*) #1

declare dso_local i32 @mce_amd_feature_init(%struct.cpuinfo_x86*) #1

declare dso_local i32 @mce_hygon_feature_init(%struct.cpuinfo_x86*) #1

declare dso_local i32 @mce_centaur_feature_init(%struct.cpuinfo_x86*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
